$Id$

version ? (????-??-??):

  - setting document's 'To' date to the end of the day (alec)

version 1.8.6 Zarah (2006-09-02):

  - lmsd/parser: fixed T-Script's problem with big numbers (alec)
  - lmsd/parser: support for multiple +, -, *, / operators in expression (alec)
  - BTS#0000570: design fix for IE in customer info box (alec)
  - BTS#0000568: fixed XSS vulnerability (s_n/alec)
  - fixed Sale Registry sorting order (alec)
  - BTS#0000586: fixed summary on Customers List when using some filters (alec)
  - remembering of selected template at document addition form when some
    errors occured (alec)
  - fixed potential problem with to_words() and float numbers on cash receipt
    printout (alec)
  - BTS#0000591: fixed problem with max_execution_time exceeding, added support
    for octet-format mask in 'allow_from' option and users IP authorization (alec)

version 1.8.5 Sina (2006-07-25):

  - fixed tickets searching with quicksearch input (alec)
  - BTS#0000576: fixed problem with MAC change (alec)
  - BTS#0000569: saved owner context when adding nodes with reuse
    checkbox (alec)
  - BTS#0000577: s/Submit/Search/ in Customer Search, Event Search
    and Node Search (alec)
  - BTS#0000580: sysinfo fixes for MacOS X (alec)
  - BTS#0000582: fixed query in Net Edit (alec)

version 1.8.4 Teer (2006-06-15):

 - lmsd: fixed configuration parser - backslash without special sequence
   isn't removed (alec)
 - added index on 'dt' column i table 'stats' in database initialization
   scripts, because of long execution time you should do this manual:
   CREATE INDEX stats_dt_idx ON stats (dt); (alec)
 - fixed "network is too small" error in non-public networks with public 
   addresses (alec)
 - little fix in chkconfig() for not set variables (alec)
 - fixed mac checking in Node Edit (alec)
 - fixed access status saving in Node Add (alec)

version 1.8.3 Tyrus (2006-05-10):

 - BTS#0000544: lmsd/payments: fixed date calculations (alec)